Advertisement image alignment corrected.

--- a/src/main/webapp/bootstrap/css/styles.css
+++ b/src/main/webapp/bootstrap/css/styles.css
@@ -1,7 +1,22 @@
 .full-screen {
     width: 100%;
-    height: 100%;
+    height: 99%;
     margin: 0px;
     padding: 0px;
     overflow: hidden;
+}
+
+.advertisement{
+    padding: 10px;
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.advertisement-preview{
+    padding: 3px;
+    height: 100%;
+    width: auto;
 }
